# budgetizer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
AIChangeLog/: DialQuantityProblem.md  JUCE-React-Connector.md  Licenses.md
ChangeLog/: UI.md
SCHEMAS/: BITCRUSHER_EXPANDED.md  CLASSES_1.md  How_To_Export.md  radio-dial.md  sweeping-filter.md
Source/: ParameterBridge.cpp  ParameterBridge.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/bitcrusher/: BitCrusher.cpp  BitCrusher.h
Source/chorus/: chorus.cpp  chorus.h
Source/crusher/: crusher.cpp  crusher.h
Source/dsp/: Oscillator.cpp  Oscillator.h
Source/license/: LicenseValidator.cpp  LicenseValidator.h
Source/lowpass/: lowpass.cpp  lowpass.h
Source/modulation/: ComplexLFO.cpp  ComplexLFO.h  LFO.cpp  LFO.h  NoiseLFO.cpp  NoiseLFO.h  TriangleLFO.cpp  TriangleLFO.h  TripleLFO.cpp  TripleLFO.h
Source/noise/: NoiseGenerator.cpp  NoiseGenerator.h
Source/pitch/: PitchModulator.cpp  PitchModulator.h
Source/player/: AudioFilePlayer.cpp  AudioFilePlayer.h
Source/radio/: BandLimiter.cpp  BandLimiter.h  FormantShifter.cpp  FormantShifter.h  MechanicalDrift.cpp  MechanicalDrift.h  MultipathFilter.cpp  MultipathFilter.h  NoiseGenerator.cpp  NoiseGenerator.h  PitchShifter.cpp  PitchShifter.h  PreEmphasisFilter.cpp  PreEmphasisFilter.h  Radio.cpp  Radio.h  RadioLimiter.cpp  RadioLimiter.h  RadioTuner.cpp  RadioTuner.h  StationBurstGenerator.cpp  StationBurstGenerator.h  SweepFilter.cpp  SweepFilter.h
scripts/: keygen.py  keys.md  sign_license.py
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  images.ts  index.css  presets.js
ui/src/bridge/: index.js  juce.js  mock.js
ui/src/components/: Antenna.jsx  Background.jsx  Body.jsx  BrandingText.jsx  Circle.jsx  Knob.jsx  LicenseOverlay.jsx  ModeButton.jsx  Speaker.jsx  SpeakerGrill.jsx  SpeakerLeg.jsx  SpeakerLegs.jsx  Toggle.jsx  Toolbar.jsx  toolbar.css
ui/src/components/Speaker/: Antenna.jsx  Body.jsx  ChannelStrip.jsx  Knob.jsx  Speaker.jsx  SpeakerLegs.jsx
ui/src/components/ui/: button.jsx  card.jsx  label.jsx  select.jsx  textarea.jsx
